--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,3 +13,6 @@ jobs:
       run: swift build -v
     - name: Run tests
       run: swift test -v
+    - name: Danger Swift
+      uses: danger/swift@2.0.1
+    
