--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,5 +14,7 @@ jobs:
     - name: Run tests
       run: swift test -v
     - name: Danger Swift
-      uses: danger/swift@2.0.1
+      uses: danger/danger
+      env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
